--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Getting Started</title>
-    <link rel="stylesheet" href="./dist/bundle.css">
+    <script defer="defer" src="./dist/bundle.js"></script>
+    <link href="./dist/bundle.css" rel="stylesheet" />
   </head>
   <body>
-    <script src="./dist/bundle.js"></script>
   </body>
 </html>
