--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>index</title>
     <script defer="defer" src="./dist/bundle.js"></script>
     <link href="./dist/bundle.css" rel="stylesheet" />
   </head>
